-- *******************************************************************************
-- Licensed Materials - Property of IBM
-- (c) Copyright IBM Corp. 2025. All Rights Reserved.
--
-- Note to U.S. Government Users Restricted Rights:
-- Use, duplication or disclosure restricted by GSA ADP Schedule
-- Contract with IBM Corp.
-- *******************************************************************************

-- DB2 Evidence Loader - Database Schema for z/OS
-- This script creates the database structure for storing deployment evidence

-- =============================================================================
-- PREREQUISITES
-- Before running this script:
-- 1. Create STOGROUP: CREATE STOGROUP DPYSTG VOLUMES ('*') VCAT <your_vcat>;
-- 2. Create DATABASE: CREATE DATABASE DPYZ001 STOGROUP DPYSTG BUFFERPOOL BP16K0 CCSID UNICODE;
-- 3. Set schema: SET SCHEMA DPYZ;
-- =============================================================================

-- DROP DATABASE DPYZ001;
-- DROP STOGROUP DPYSTG;
-- CREATE STOGROUP DPYSTG VOLUMES ('*') VCAT DBD1;
-- CREATE DATABASE DPYZ001 STOGROUP DPYSTG BUFFERPOOL BP16K0 CCSID UNICODE;

SET SCHEMA DEPLOYZ;

-- =============================================================================
-- 1. DEPLOY TABLE (Main deployment information)
-- =============================================================================

CREATE
   TABLESPACE DPYZ135
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.DEPLOY (
    DEPLOY_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    DESCRIPTION VARCHAR(1000),
    APPLICATION_NAME VARCHAR(255),
    APPLICATION_VERSION VARCHAR(50),
    ENVIRONMENT_NAME VARCHAR(255),
    DEPLOY_TIMESTAMP TIMESTAMP,
    CREATION_TIMESTAMP TIMESTAMP,
    STATUS VARCHAR(50),
    ENGINE_VERSION VARCHAR(50),
    ENGINE_BUILD VARCHAR(50),
    ENGINE_DATE TIMESTAMP,
    PACKAGE_PATH VARCHAR(500),
    PACKAGE_SHA256 VARCHAR(64)
) DATA CAPTURE NONE IN DPYZ001.DPYZ135;

CREATE UNIQUE INDEX DEPLOY_PK_NDX
  ON DEPLOYZ.DEPLOY (DEPLOY_ID);

ALTER TABLE DEPLOYZ.DEPLOY
  ADD CONSTRAINT DEPLOY_PK PRIMARY KEY (DEPLOY_ID);

-- =============================================================================
-- 2. ACTIVITY TABLE
-- =============================================================================

CREATE
   TABLESPACE DPYZ136
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.ACTIVITY (
    ACTIVITY_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    DEPLOY_ID INTEGER NOT NULL,
    ACTIVITY_NAME VARCHAR(255),
    SHORT_NAME VARCHAR(50),
    DESCRIPTION VARCHAR(1000),
    STATUS VARCHAR(50),
    MESSAGE VARCHAR(2000)
) DATA CAPTURE NONE IN DPYZ001.DPYZ136;

CREATE UNIQUE INDEX ACTIVITY_PK_NDX
  ON DEPLOYZ.ACTIVITY (ACTIVITY_ID);

ALTER TABLE DEPLOYZ.ACTIVITY
  ADD CONSTRAINT ACTIVITY_PK PRIMARY KEY (ACTIVITY_ID);

CREATE INDEX IDX_ACTIVITY_DEPLOY
  ON DEPLOYZ.ACTIVITY(DEPLOY_ID);

-- =============================================================================
-- 3. STATE TABLE (Generic states - Fixed table with 4 values)
-- =============================================================================

CREATE
   TABLESPACE DPYZ137
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.STATE (
    STATE_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    STATE_NAME VARCHAR(50) NOT NULL,
    DESCRIPTION VARCHAR(500)
) DATA CAPTURE NONE IN DPYZ001.DPYZ137;

CREATE UNIQUE INDEX STATE_PK_NDX
  ON DEPLOYZ.STATE (STATE_ID);

ALTER TABLE DEPLOYZ.STATE
  ADD CONSTRAINT STATE_PK PRIMARY KEY (STATE_ID);

CREATE UNIQUE INDEX STATE_NAME_UK_NDX
  ON DEPLOYZ.STATE (STATE_NAME);

ALTER TABLE DEPLOYZ.STATE
  ADD CONSTRAINT STATE_NAME_UK UNIQUE (STATE_NAME);

-- Insert fixed states
INSERT INTO DEPLOYZ.STATE (STATE_NAME, DESCRIPTION) VALUES 
    ('CREATED', 'State for creation operations');
    
INSERT INTO DEPLOYZ.STATE (STATE_NAME, DESCRIPTION) VALUES 
    ('UPDATED', 'State for update operations');
    
INSERT INTO DEPLOYZ.STATE (STATE_NAME, DESCRIPTION) VALUES 
    ('RENAMED', 'State for rename operations');
    
INSERT INTO DEPLOYZ.STATE (STATE_NAME, DESCRIPTION) VALUES 
    ('DELETED', 'State for deletion operations');

-- =============================================================================
-- 4. ACTION TABLE
-- =============================================================================

CREATE
   TABLESPACE DPYZ147
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.ACTION (
    ACTION_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    ACTIVITY_ID INTEGER NOT NULL,
    ACTION_NAME VARCHAR(255),
    SHORT_NAME VARCHAR(50),
    DESCRIPTION VARCHAR(1000),
    STATUS VARCHAR(50),
    MESSAGE VARCHAR(2000)
) DATA CAPTURE NONE IN DPYZ001.DPYZ147;

CREATE UNIQUE INDEX ACTION_PK_NDX
  ON DEPLOYZ.ACTION (ACTION_ID);

ALTER TABLE DEPLOYZ.ACTION
  ADD CONSTRAINT ACTION_PK PRIMARY KEY (ACTION_ID);

CREATE INDEX IDX_ACTION_ACTIVITY
  ON DEPLOYZ.ACTION(ACTIVITY_ID);

-- =============================================================================
-- 5. ACTION_STATE TABLE (Many-to-Many relationship between ACTION and STATE)
-- =============================================================================

CREATE
   TABLESPACE DPYZ148
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.ACTION_STATE (
    ACTION_STATE_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    ACTION_ID INTEGER NOT NULL,
    STATE_ID INTEGER NOT NULL
) DATA CAPTURE NONE IN DPYZ001.DPYZ148;

CREATE UNIQUE INDEX ACTION_STATE_PK_NDX
  ON DEPLOYZ.ACTION_STATE (ACTION_STATE_ID);

ALTER TABLE DEPLOYZ.ACTION_STATE
  ADD CONSTRAINT ACTION_STATE_PK PRIMARY KEY (ACTION_STATE_ID);

CREATE UNIQUE INDEX ACTION_STATE_UK_NDX
  ON DEPLOYZ.ACTION_STATE (ACTION_ID, STATE_ID);

ALTER TABLE DEPLOYZ.ACTION_STATE
  ADD CONSTRAINT ACTION_STATE_UK UNIQUE (ACTION_ID, STATE_ID);

CREATE INDEX IDX_ACTION_STATE_ACTION
  ON DEPLOYZ.ACTION_STATE(ACTION_ID);

CREATE INDEX IDX_ACTION_STATE_STATE
  ON DEPLOYZ.ACTION_STATE(STATE_ID);

-- =============================================================================
-- 6. STEP TABLE
-- =============================================================================

CREATE
   TABLESPACE DPYZ138
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.STEP (
    STEP_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    ACTION_ID INTEGER NOT NULL,
    STEP_NAME VARCHAR(255),
    SHORT_NAME VARCHAR(50),
    DESCRIPTION VARCHAR(1000),
    STATUS VARCHAR(50),
    MESSAGE VARCHAR(2000),
    BUILDING_BLOCK VARCHAR(100) DEFAULT '',
    CRUD_ACTION VARCHAR(100) DEFAULT 'UPDATE'
) DATA CAPTURE NONE IN DPYZ001.DPYZ138;

CREATE UNIQUE INDEX STEP_PK_NDX
  ON DEPLOYZ.STEP (STEP_ID);

ALTER TABLE DEPLOYZ.STEP
  ADD CONSTRAINT STEP_PK PRIMARY KEY (STEP_ID);

CREATE INDEX IDX_STEP_ACTION
  ON DEPLOYZ.STEP(ACTION_ID);

-- =============================================================================
-- 7. TAG TABLE (Unique tags)
-- =============================================================================

CREATE
   TABLESPACE DPYZ139
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.TAG (
    TAG_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    TAG_NAME VARCHAR(255) NOT NULL
) DATA CAPTURE NONE IN DPYZ001.DPYZ139;

CREATE UNIQUE INDEX TAG_PK_NDX
  ON DEPLOYZ.TAG (TAG_ID);

ALTER TABLE DEPLOYZ.TAG
  ADD CONSTRAINT TAG_PK PRIMARY KEY (TAG_ID);

CREATE UNIQUE INDEX UQ_TAG_NAME_NDX
  ON DEPLOYZ.TAG (TAG_NAME);

ALTER TABLE DEPLOYZ.TAG
  ADD CONSTRAINT UQ_TAG_NAME UNIQUE (TAG_NAME);

-- =============================================================================
-- 8. ACTIVITY_TAG TABLE (Many-to-Many relationship)
-- =============================================================================

CREATE
   TABLESPACE DPYZ140
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.ACTIVITY_TAG (
    ACTIVITY_ID INTEGER NOT NULL,
    TAG_ID INTEGER NOT NULL
) DATA CAPTURE NONE IN DPYZ001.DPYZ140;

CREATE INDEX IDX_ACTIVITY_TAG_ACTIVITY
  ON DEPLOYZ.ACTIVITY_TAG(ACTIVITY_ID);

CREATE INDEX IDX_ACTIVITY_TAG_TAG
  ON DEPLOYZ.ACTIVITY_TAG(TAG_ID);

CREATE UNIQUE INDEX ACTIVITY_TAG_PK_NDX
  ON DEPLOYZ.ACTIVITY_TAG (ACTIVITY_ID, TAG_ID);

ALTER TABLE DEPLOYZ.ACTIVITY_TAG
  ADD CONSTRAINT ACTIVITY_TAG_PK PRIMARY KEY (ACTIVITY_ID, TAG_ID);

-- =============================================================================
-- 9. ACTION_TAG TABLE (Many-to-Many relationship)
-- =============================================================================

CREATE
   TABLESPACE DPYZ141
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.ACTION_TAG (
    ACTION_ID INTEGER NOT NULL,
    TAG_ID INTEGER NOT NULL
) DATA CAPTURE NONE IN DPYZ001.DPYZ141;

CREATE INDEX IDX_ACTION_TAG_ACTION
  ON DEPLOYZ.ACTION_TAG(ACTION_ID);

CREATE INDEX IDX_ACTION_TAG_TAG
  ON DEPLOYZ.ACTION_TAG(TAG_ID);

CREATE UNIQUE INDEX ACTION_TAG_PK_NDX
  ON DEPLOYZ.ACTION_TAG (ACTION_ID, TAG_ID);

ALTER TABLE DEPLOYZ.ACTION_TAG
  ADD CONSTRAINT ACTION_TAG_PK PRIMARY KEY (ACTION_ID, TAG_ID);

-- =============================================================================
-- 10. STEP_TAG TABLE (Many-to-Many relationship)
-- =============================================================================

CREATE
   TABLESPACE DPYZ142
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.STEP_TAG (
    STEP_ID INTEGER NOT NULL,
    TAG_ID INTEGER NOT NULL
) DATA CAPTURE NONE IN DPYZ001.DPYZ142;

CREATE INDEX IDX_STEP_TAG_STEP
  ON DEPLOYZ.STEP_TAG(STEP_ID);

CREATE INDEX IDX_STEP_TAG_TAG
  ON DEPLOYZ.STEP_TAG(TAG_ID);

CREATE UNIQUE INDEX STEP_TAG_PK_NDX
  ON DEPLOYZ.STEP_TAG (STEP_ID, TAG_ID);

ALTER TABLE DEPLOYZ.STEP_TAG
  ADD CONSTRAINT STEP_TAG_PK PRIMARY KEY (STEP_ID, TAG_ID);

-- =============================================================================
-- 11. ARTIFACT TABLE (Unique artifacts by APPLICATION_NAME + PATH)
-- =============================================================================

CREATE
   TABLESPACE DPYZ143
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.ARTIFACT (
    ARTIFACT_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    APPLICATION_NAME VARCHAR(255) NOT NULL,
    ARTIFACT_NAME VARCHAR(255),
    ARTIFACT_PATH VARCHAR(1000) NOT NULL,
    ARTIFACT_TYPE VARCHAR(100)
) DATA CAPTURE NONE IN DPYZ001.DPYZ143;

CREATE UNIQUE INDEX ARTIFACT_PK_NDX
  ON DEPLOYZ.ARTIFACT (ARTIFACT_ID);

ALTER TABLE DEPLOYZ.ARTIFACT
  ADD CONSTRAINT ARTIFACT_PK PRIMARY KEY (ARTIFACT_ID);

CREATE UNIQUE INDEX UQ_ARTIFACT_APP_PATH_NDX
  ON DEPLOYZ.ARTIFACT (APPLICATION_NAME, ARTIFACT_PATH);

ALTER TABLE DEPLOYZ.ARTIFACT
  ADD CONSTRAINT UQ_ARTIFACT_APP_PATH UNIQUE (APPLICATION_NAME, ARTIFACT_PATH);

-- =============================================================================
-- 12. STEP_ARTIFACT TABLE (Many-to-Many relationship)
-- =============================================================================

CREATE
   TABLESPACE DPYZ144
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.STEP_ARTIFACT (
    STEP_ID INTEGER NOT NULL,
    ARTIFACT_ID INTEGER NOT NULL
) DATA CAPTURE NONE IN DPYZ001.DPYZ144;

CREATE INDEX IDX_STEP_ARTIFACT_STEP
  ON DEPLOYZ.STEP_ARTIFACT(STEP_ID);

CREATE INDEX IDX_STEP_ARTIFACT_ARTIFACT
  ON DEPLOYZ.STEP_ARTIFACT(ARTIFACT_ID);

CREATE UNIQUE INDEX STEP_ARTIFACT_PK_NDX
  ON DEPLOYZ.STEP_ARTIFACT (STEP_ID, ARTIFACT_ID);

ALTER TABLE DEPLOYZ.STEP_ARTIFACT
  ADD CONSTRAINT STEP_ARTIFACT_PK PRIMARY KEY (STEP_ID, ARTIFACT_ID);

-- =============================================================================
-- 13. PROPERTIES TABLE (Generic key-value properties)
-- =============================================================================

CREATE
   TABLESPACE DPYZ145
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.PROPERTIES (
    PROPERTY_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    ENTITY_TYPE VARCHAR(50) NOT NULL,
    ENTITY_ID INTEGER NOT NULL,
    PROPERTY_KEY VARCHAR(255) NOT NULL,
    PROPERTY_VALUE VARCHAR(4000),
    DEPLOY_ID INTEGER
) DATA CAPTURE NONE IN DPYZ001.DPYZ145;

CREATE UNIQUE INDEX PROPERTIES_PK_NDX
  ON DEPLOYZ.PROPERTIES (PROPERTY_ID);

ALTER TABLE DEPLOYZ.PROPERTIES
  ADD CONSTRAINT PROPERTIES_PK PRIMARY KEY (PROPERTY_ID);

CREATE INDEX IDX_PROPERTIES_ENTITY
  ON DEPLOYZ.PROPERTIES(ENTITY_TYPE, ENTITY_ID);

CREATE INDEX IDX_PROPERTIES_KEY
  ON DEPLOYZ.PROPERTIES(PROPERTY_KEY);

ALTER TABLE DEPLOYZ.PROPERTIES
ADD CONSTRAINT CK_PROPERTIES_ENTITY_TYPE 
CHECK (ENTITY_TYPE IN ('ACTIVITY', 'ACTION', 'STEP', 'ARTIFACT'));

-- =============================================================================
-- 14. STEP_RESULT_DETAIL TABLE
-- =============================================================================

CREATE
   TABLESPACE DPYZ146
      IN DPYZ001
      USING STOGROUP DPYSTG
      PRIQTY -1
      SECQTY -1
      ERASE NO
      FREEPAGE 0
      PCTFREE 10
      GBPCACHE CHANGED
      COMPRESS NO
      LOGGED
      DSSIZE 4 G
      SEGSIZE 64
      MAXPARTITIONS 16
      BUFFERPOOL BP16K0
      LOCKSIZE ANY
      LOCKMAX SYSTEM
      CLOSE NO
      CCSID UNICODE
      MAXROWS 255;

CREATE TABLE DEPLOYZ.STEP_RESULT_DETAIL (
    RESULT_ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
    STEP_ID INTEGER NOT NULL,
    STATUS VARCHAR(50),
    MESSAGE VARCHAR(2000),
    COMMAND VARCHAR(4000),
    RESULT_COMMAND VARCHAR(4000)
) DATA CAPTURE NONE IN DPYZ001.DPYZ146;

CREATE UNIQUE INDEX STEP_RESULT_DETAIL_PK_NDX
  ON DEPLOYZ.STEP_RESULT_DETAIL (RESULT_ID);

ALTER TABLE DEPLOYZ.STEP_RESULT_DETAIL
  ADD CONSTRAINT STEP_RESULT_DETAIL_PK PRIMARY KEY (RESULT_ID);

CREATE INDEX IDX_RESULT_STEP
  ON DEPLOYZ.STEP_RESULT_DETAIL(STEP_ID);

-- =============================================================================
-- FOREIGN KEY CONSTRAINTS
-- =============================================================================

ALTER TABLE DEPLOYZ.ACTIVITY
  ADD CONSTRAINT FK_ACTIVITY_DEPLOY
  FOREIGN KEY (DEPLOY_ID)
  REFERENCES DEPLOYZ.DEPLOY(DEPLOY_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.ACTION
  ADD CONSTRAINT FK_ACTION_ACTIVITY
  FOREIGN KEY (ACTIVITY_ID)
  REFERENCES DEPLOYZ.ACTIVITY(ACTIVITY_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.ACTION_STATE
  ADD CONSTRAINT FK_ACTION_STATE_ACTION
  FOREIGN KEY (ACTION_ID)
  REFERENCES DEPLOYZ.ACTION(ACTION_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.ACTION_STATE
  ADD CONSTRAINT FK_ACTION_STATE_STATE
  FOREIGN KEY (STATE_ID)
  REFERENCES DEPLOYZ.STATE(STATE_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.STEP
  ADD CONSTRAINT FK_STEP_ACTION
  FOREIGN KEY (ACTION_ID)
  REFERENCES DEPLOYZ.ACTION(ACTION_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.ACTIVITY_TAG
  ADD CONSTRAINT FK_ACTIVITY_TAG_ACTIVITY
  FOREIGN KEY (ACTIVITY_ID)
  REFERENCES DEPLOYZ.ACTIVITY(ACTIVITY_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.ACTIVITY_TAG
  ADD CONSTRAINT FK_ACTIVITY_TAG_TAG
  FOREIGN KEY (TAG_ID)
  REFERENCES DEPLOYZ.TAG(TAG_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.ACTION_TAG
  ADD CONSTRAINT FK_ACTION_TAG_ACTION
  FOREIGN KEY (ACTION_ID)
  REFERENCES DEPLOYZ.ACTION(ACTION_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.ACTION_TAG
  ADD CONSTRAINT FK_ACTION_TAG_TAG
  FOREIGN KEY (TAG_ID)
  REFERENCES DEPLOYZ.TAG(TAG_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.STEP_TAG
  ADD CONSTRAINT FK_STEP_TAG_STEP
  FOREIGN KEY (STEP_ID)
  REFERENCES DEPLOYZ.STEP(STEP_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.STEP_TAG
  ADD CONSTRAINT FK_STEP_TAG_TAG
  FOREIGN KEY (TAG_ID)
  REFERENCES DEPLOYZ.TAG(TAG_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.STEP_ARTIFACT
  ADD CONSTRAINT FK_STEP_ARTIFACT_STEP
  FOREIGN KEY (STEP_ID)
  REFERENCES DEPLOYZ.STEP(STEP_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.STEP_ARTIFACT
  ADD CONSTRAINT FK_STEP_ARTIFACT_ARTIFACT
  FOREIGN KEY (ARTIFACT_ID)
  REFERENCES DEPLOYZ.ARTIFACT(ARTIFACT_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.PROPERTIES
  ADD CONSTRAINT FK_PROPERTIES_DEPLOY
  FOREIGN KEY (DEPLOY_ID)
  REFERENCES DEPLOYZ.DEPLOY(DEPLOY_ID)
  ON DELETE CASCADE;

ALTER TABLE DEPLOYZ.STEP_RESULT_DETAIL
  ADD CONSTRAINT FK_STEP_RESULT_STEP
  FOREIGN KEY (STEP_ID)
  REFERENCES DEPLOYZ.STEP(STEP_ID)
  ON DELETE CASCADE;

-- =============================================================================
-- VIEWS FOR EASIER QUERYING
-- =============================================================================

-- View: All artifacts with their usage count per application
CREATE VIEW DEPLOYZ.V_ARTIFACT_USAGE AS
SELECT 
    a.ARTIFACT_ID,
    a.APPLICATION_NAME,
    a.ARTIFACT_NAME,
    a.ARTIFACT_PATH,
    a.ARTIFACT_TYPE,
    COUNT(DISTINCT sa.STEP_ID) AS USAGE_COUNT
FROM DEPLOYZ.ARTIFACT a
LEFT JOIN DEPLOYZ.STEP_ARTIFACT sa ON a.ARTIFACT_ID = sa.ARTIFACT_ID
GROUP BY a.ARTIFACT_ID, a.APPLICATION_NAME, a.ARTIFACT_NAME, a.ARTIFACT_PATH, a.ARTIFACT_TYPE;

-- View: Complete deployment hierarchy
CREATE VIEW DEPLOYZ.V_DEPLOYMENT_HIERARCHY AS
SELECT 
    d.DEPLOY_ID,
    d.APPLICATION_NAME,
    d.ENVIRONMENT_NAME,
    d.DEPLOY_TIMESTAMP,
    d.STATUS AS DEPLOY_STATUS,
    act.ACTIVITY_ID,
    act.ACTIVITY_NAME,
    act.STATUS AS ACTIVITY_STATUS,
    a.ACTION_ID,
    a.ACTION_NAME,
    a.STATUS AS ACTION_STATUS,
    s.STEP_ID,
    s.STEP_NAME,
    s.STATUS AS STEP_STATUS
FROM DEPLOYZ.DEPLOY d
LEFT JOIN DEPLOYZ.ACTIVITY act ON d.DEPLOY_ID = act.DEPLOY_ID
LEFT JOIN DEPLOYZ.ACTION a ON act.ACTIVITY_ID = a.ACTIVITY_ID
LEFT JOIN DEPLOYZ.STEP s ON a.ACTION_ID = s.ACTION_ID;

-- View: Steps with their artifacts
CREATE VIEW DEPLOYZ.V_STEP_ARTIFACTS AS
SELECT 
    s.STEP_ID,
    s.STEP_NAME,
    s.STATUS AS STEP_STATUS,
    art.ARTIFACT_ID,
    art.APPLICATION_NAME,
    art.ARTIFACT_NAME,
    art.ARTIFACT_PATH,
    art.ARTIFACT_TYPE
FROM DEPLOYZ.STEP s
INNER JOIN DEPLOYZ.STEP_ARTIFACT sa ON s.STEP_ID = sa.STEP_ID
INNER JOIN DEPLOYZ.ARTIFACT art ON sa.ARTIFACT_ID = art.ARTIFACT_ID;

-- View: Activities with their tags (using LISTAGG for DB2 compatibility)
CREATE VIEW DEPLOYZ.V_ACTIVITY_TAGS AS
SELECT 
    a.ACTIVITY_ID,
    a.ACTIVITY_NAME,
    a.SHORT_NAME,
    LISTAGG(t.TAG_NAME, ',') WITHIN GROUP (ORDER BY t.TAG_NAME) AS TAGS
FROM DEPLOYZ.ACTIVITY a
LEFT JOIN DEPLOYZ.ACTIVITY_TAG at ON a.ACTIVITY_ID = at.ACTIVITY_ID
LEFT JOIN DEPLOYZ.TAG t ON at.TAG_ID = t.TAG_ID
GROUP BY a.ACTIVITY_ID, a.ACTIVITY_NAME, a.SHORT_NAME;

-- View: Actions with their tags (using LISTAGG for DB2 compatibility)
CREATE VIEW DEPLOYZ.V_ACTION_TAGS AS
SELECT 
    ac.ACTION_ID,
    ac.ACTION_NAME,
    ac.SHORT_NAME,
    LISTAGG(ac_t.TAG_NAME, ',') WITHIN GROUP (ORDER BY ac_t.TAG_NAME) AS TAGS
FROM DEPLOYZ.ACTION ac
LEFT JOIN DEPLOYZ.ACTION_TAG act ON ac.ACTION_ID = act.ACTION_ID
LEFT JOIN DEPLOYZ.TAG ac_t ON act.TAG_ID = ac_t.TAG_ID
GROUP BY ac.ACTION_ID, ac.ACTION_NAME, ac.SHORT_NAME;

-- View: Steps with their tags (using LISTAGG for DB2 compatibility)
CREATE VIEW DEPLOYZ.V_STEP_TAGS AS
SELECT 
    s.STEP_ID,
    s.STEP_NAME,
    s.SHORT_NAME,
    LISTAGG(s_t.TAG_NAME, ',') WITHIN GROUP (ORDER BY s_t.TAG_NAME) AS TAGS
FROM DEPLOYZ.STEP s
LEFT JOIN DEPLOYZ.STEP_TAG st ON s.STEP_ID = st.STEP_ID
LEFT JOIN DEPLOYZ.TAG s_t ON st.TAG_ID = s_t.TAG_ID
GROUP BY s.STEP_ID, s.STEP_NAME, s.SHORT_NAME;

-- View: Actions with their states (using LISTAGG for DB2 compatibility)
CREATE VIEW DEPLOYZ.V_ACTION_STATES AS
SELECT 
    a.ACTION_ID,
    a.ACTION_NAME,
    a.SHORT_NAME,
    LISTAGG(st.STATE_NAME, ',') WITHIN GROUP (ORDER BY st.STATE_NAME) AS STATES
FROM DEPLOYZ.ACTION a
LEFT JOIN DEPLOYZ.ACTION_STATE ast ON a.ACTION_ID = ast.ACTION_ID
LEFT JOIN DEPLOYZ.STATE st ON ast.STATE_ID = st.STATE_ID
GROUP BY a.ACTION_ID, a.ACTION_NAME, a.SHORT_NAME;

-- =============================================================================
-- GRANTS (adjust as needed for your security model)
-- =============================================================================

-- =============================================================================
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.DEPLOY TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.ACTIVITY TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.STATE TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.ACTION TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.ACTION_STATE TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.STEP TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.TAG TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.ACTIVITY_TAG TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.ACTION_TAG TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.STEP_TAG TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.ARTIFACT TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.STEP_ARTIFACT TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.PROPERTIES TO USER deployer;
-- GRANT SELECT, INSERT, UPDATE, DELETE ON DEPLOYZ.STEP_RESULT_DETAIL TO USER deployer


COMMIT;

-- =============================================================================
-- END OF SCHEMA
-- =============================================================================