classDiagram

class Deploy {
  DEPLOY_ID
  APPLICATION_NAME
  ENVIRONMENT_NAME
  DEPLOY_TIMESTAMP
}

class Activity {
  ACTIVITY_ID
  DEPLOY_ID
}

class Action {
  ACTION_ID
  ACTIVITY_ID
}

class Step {
  STEP_ID
  ACTION_ID
  BUILDING_BLOCK
  CRUD_ACTION
}

class Artifact {
  ARTIFACT_ID
  APPLICATION_NAME
  ARTIFACT_PATH
}

class State {
  STATE_ID
  STATE_NAME
}

class Tag {
  TAG_ID
  TAG_NAME
}

class Properties {
  PROPERTY_ID
  ENTITY_TYPE
  ENTITY_ID
}

class StepResultDetail {
  RESULT_ID
  STEP_ID
}

Deploy "1" --> "*" Activity
Activity "1" --> "*" Action
Action "1" --> "*" Step

Step "*" --> "*" Artifact : STEP_ARTIFACT
Action "*" --> "*" State : ACTION_STATE

Activity "*" --> "*" Tag
Action "*" --> "*" Tag
Step "*" --> "*" Tag

Step "1" --> "*" StepResultDetail
